--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -61,6 +61,7 @@ header {
     justify-content: center;
     align-items: center;
     background-color: #247CCD;
+    transition: all .3s;
 }
 .logo-block img {
     width: auto;
@@ -71,17 +72,20 @@ header {
     justify-content: flex-start;
     align-items: center;
     background-color: #ffffff;
+    transition: all .3s;
 }
 .head-block__image {
     margin-left: 25px;
     margin-right: 35px;
+    transition: all .3s;
 }
 .head-block__list {
     width: 100%;
-    max-width: 995px;
+    max-width: 990px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all .3s;
 }
 .head-block__text {
     max-width: 230px;
@@ -94,6 +98,7 @@ header {
     align-items: flex-start;
     padding: 12px;
     margin: 0 40px;
+    transition: all .3s;
 }
 .head-block__contacts {
     display: flex;
@@ -101,6 +106,7 @@ header {
     justify-content: center;
     align-items: flex-start;
     height: 100%;
+    transition: all .3s;
 }
 .head-block__contacts a {
     text-decoration: none;
@@ -137,6 +143,7 @@ header {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    transition: all .3s;
 }
 .left-side__search {
     width: 284px;
@@ -153,9 +160,11 @@ header {
     color: #767E86;
     padding-left: 15px;
     margin: 30px 0px;
+    transition: all .3s;
 }
 .left-side__navigation {
     width: 284px;
+    transition: all .3s;
 }
 .left-side__navigation ul {
     width: 100%;
@@ -179,9 +188,11 @@ header {
     position: relative;
     left: -46px;
     margin-top: 30px;
+    transition: all .3s;
 }
 .deputat-left img {
     width: 186px;
+    transition: all .3s;
 }
 .deputat-left__name {
     font-weight: bold;
@@ -204,6 +215,7 @@ header {
     justify-content: flex-start;
     align-items: flex-start;
     margin-top: 60px;
+    transition: all .3s;
 }
 .left-side__contacts a {
     text-decoration: none;
@@ -230,11 +242,13 @@ header {
 /*main*/
 main {
     width: calc(100% - 445px);
+    transition: all .3s;
 }
 .main-slider {
     max-width: 1356px;
     margin-left: 0 !important;
     margin-bottom: 50px;
+    transition: all .3s;
 }
 .main-slider__item {
     position: relative;
@@ -245,6 +259,7 @@ main {
     right:0;
     width: 40%;
     height: 100%; 
+    transition: all .3s;
 }
 .main-slider__text {
     font-weight: bold;
@@ -280,6 +295,7 @@ main {
     width: 100%;
     max-width: 1356px;
     margin-bottom: 80px;
+    transition: all .3s;
 }
 .content-list__tab,
 .my-deputat__tab {
@@ -328,6 +344,7 @@ main {
     background-color: #c5c5c5;
     margin-left: 35px;
     width: calc(100% - 35px);
+    transition: all .3s;
 }
 .content-list__content:first-child {
     display: block;
@@ -379,6 +396,7 @@ main {
 .main-video {
     width: 100%;
     max-width: 1356px;
+    transition: all .3s;
 }
 .main-video__title {
     font-weight: bold;
@@ -392,6 +410,7 @@ main {
     padding-bottom: 56.25%;
     background-color: #000000;
     margin-left: 35px;
+    transition: all .3s;
 }
 .main-video__media {
     position: absolute;
@@ -452,6 +471,7 @@ main {
     flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
+    transition: all .3s;
 }
 .evolution__ranges {
     width: 100%;
@@ -583,14 +603,13 @@ input[type=range]:focus::-ms-fill-upper {
     align-items: center;
     width: 48%;
     height: 49px;
-    left: 1140px;
-    top: 2455px;
     border: 1px solid #247CCD;
     box-sizing: border-box;
     border-radius: 25px;
     font-size: 18px;
     color: #247CCD;
     background-color: transparent;
+    transition: all .3s;
 }
 .opacity__block {
     width: 49%;
@@ -721,6 +740,7 @@ input[type=range]:focus::-ms-fill-upper {
     font-weight: bold;
     font-size: 16px;
     line-height: 20px;
+    text-align: center;
 }
 .my-deputat__name:hover {
     text-decoration: underline;
@@ -730,6 +750,8 @@ input[type=range]:focus::-ms-fill-upper {
     font-weight: bold;
     font-size: 13px;
     line-height: 18px;
+    text-align: center;
+    margin-bottom: 5px;
 }
 .my-deputat__post:hover {
     text-decoration: underline;
@@ -1067,7 +1089,9 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 /*Страница Депутаты*/
-.deputat-page .my-deputat__tab {
+.deputat-page .my-deputat__tab,
+.reception-page .my-deputat__tab,
+.committees-page .my-deputat__tab {
     width: 100%;
     margin-left: 35px;
     margin-bottom: 35px;
@@ -1076,7 +1100,9 @@ input[type=range]:focus::-ms-fill-upper {
     justify-content: flex-start;
     align-items: center;
 }
-.deputat-page .my-deputat__link::after {
+.deputat-page .my-deputat__link::after,
+.reception-page .my-deputat__link::after,
+.committees-page .my-deputat__link::after {
     content: url('../img/deputat/line.png');
     margin-left: 25px;
     position: relative;
@@ -1107,6 +1133,7 @@ input[type=range]:focus::-ms-fill-upper {
     position: relative;
     bottom: 45px;
     left: 40px;
+    transition: all .3s;
 }
 .history__text-block {
     width: 100%;
@@ -1210,7 +1237,7 @@ input[type=range]:focus::-ms-fill-upper {
     text-align: left;
     outline: none;
     font-size: 15px;
-    transition: 0.4s;
+    transition: all .4s;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1804,6 +1831,7 @@ input[type=range]:focus::-ms-fill-upper {
     }
     .my-deputat__image {
         width: 170px;
+        transition: all .3s;
     }
     .main-slider {
         max-width: 1180px;
@@ -1880,6 +1908,9 @@ input[type=range]:focus::-ms-fill-upper {
     }
     .main-slider {
         max-width: 1020px;
+    }
+    .main-slider__info {
+        width: 43%;
     }
     .content-list {
         max-width: 1020px;
@@ -2013,11 +2044,456 @@ input[type=range]:focus::-ms-fill-upper {
     .table__title-col.time img {
         width: 360px;
     }
+    .main-slider__info {
+        width: 44%;
+    }
 }
 
-@media (max-width: 1199px) {}
-@media (max-width: 1024px) {}
-@media (max-width: 992px) {}
-@media (max-width: 768px) {}
+@media (max-width: 1199px) {
+    .logo-block img {
+        width: 160px;
+    }
+    .logo-block {
+        width: 220px;
+    }
+    .head-block {
+        width: calc(100% - 220px);
+    }
+    .head-block__image {
+        width: 80px;
+        margin-right: 20px;
+    }
+    .head-block__text {
+        margin: 0px 5px;
+        font-size: 12px;
+    }
+    .head-block__list {
+        max-width: 500px;
+    }
+    .head-block__contacts a {
+        font-size: 16px;
+    }
+    .left-side {
+        width: 220px;
+    }
+    .left-side__search {
+        width: 200px;
+    }
+    .left-side__navigation {
+        width: 200px;
+    }
+    .deputat-left img {
+        width: 170px;
+    }
+    .left-side__contacts {
+        width: 200px;
+    }
+    main {
+        width: calc(100% - 220px);
+    }
+    .main-slider {
+        margin-bottom: 30px;
+    }
+    .main-slider__info {
+        width: 45%;
+    }
+    .main-slider__text {
+        font-size: 36px;
+    }
+    .content-list__tab button:first-child, 
+    .my-deputat__tab button:first-child {
+        margin-left: 20px;
+    }
+    .news-list {
+        margin-left: 20px;
+    }
+    .news-list__link {
+        font-size: 16px;
+    }
+    .news-list__title {
+        font-size: 14px;
+    }
+    #advertising, #invitation {
+        margin-left: 20px;
+    }
+    .main-video__title {
+        margin-left: 20px;
+    }
+    .main-video__block {
+        width: calc(100% - 20px);
+        margin-left: 20px;
+    }
+    .evlution__title {
+        margin-left: 20px;
+    }
+    .evolution__body {
+        width: calc(100% - 20px);
+        margin-left: 20px; 
+    }
+    .evolution__range-block, 
+    .history__range-block {
+        width: 48%;
+    }
+    input[type=range]::-webkit-slider-thumb {
+        height: 30px;
+        width: 20px;
+        background: #EFF7FC;
+        box-shadow: 0px 0px 4px 1px rgba(59, 120, 175, 0.62), inset 0px 0px 2px 1px #FFFFFF, inset 0px 0px 8px rgba(112, 138, 186, 0.3);
+        border-radius: 5px;
+        cursor: pointer;
+        -webkit-appearance: none;
+        margin-top: -13px;
+    }
+    .evolution__years-block span, 
+    .opacity__years-block span, 
+    .history__years-block span {
+        font-size: 16px;
+    }
+    .history__title {
+        margin-left: 20px;
+    }
+    .history .history__range-block {
+        width: calc(100% - 30px);
+        margin-left: 20px;
+    }
+    .history__body {
+        width: calc(100% - 40px);
+        margin-left: 30px;
+    }
+    .history__year {
+        font-size: 52px;
+        left: -25px;
+    }
+    .history__name {
+        margin-bottom: 10px;
+    }
+    .history__text {
+        margin-left: 10px;
+        margin-right: 10px;
+        line-height: 20px;
+        text-align: left;
+    }
+    .my-deputat__title {
+        margin-left: 20px;
+    }
+    .my-deputat__content {
+        margin-left: 20px;
+    }
+    .my-deputat__image {
+        width: 125px;
+    }
+    .all-deputats {
+        width: 96%;
+    }
+    .footer {
+        padding-top: 20px;
+    }
+    .footer__body {
+        width: 100%;
+        margin-left: 0px;
+    }
+    .footer__menu-link {
+        font-size: 12px;
+    }
+    .footer__menu-item {
+        margin-bottom: 15px;
+    }
+    .footer_copyrigt {
+        padding-left: 10px;
+        padding-bottom: 20px;
+    }
+
+    /*О Думе*/
+    .deputat {
+        margin-left: 20px;
+    }
+    .deputat-page .my-deputat__tab {
+        margin-left: 20px;
+    }
+    .content-list__tab button, 
+    .my-deputat__tab button {
+        margin: 10px;
+    }
+    .content-list__tab button:first-child, 
+    .my-deputat__tab button:first-child {
+        margin-left: 10px;
+    }
+    .content-list__tab button, .my-deputat__tab button {
+        font-size: 16px;
+    }
+    .deputat-page .my-deputat__link::after {
+        margin-left: 15px;
+    }
+    #tickmarks option {
+        font-size: 14px;
+    }
+    #tickmarks option::after {
+        height: 20px;
+        bottom: 47px;
+    }
+
+    /*Депутаты*/
+    .my-deputat__tab button.active {
+        font-size: 20px;
+    }
+    .deputat-page .my-deputat__item {
+        width: 15%;
+        margin-bottom: 1%;
+    }
+    .deputat-page .my-deputat__image {
+        width: 120px;
+    }
+    .my-deputat__image {
+        margin-bottom: 0px;
+    }
+    .my-deputat__post {
+        display: block;
+        height: 55px;
+    }
+
+    /*Деятельность*/
+    #decision #tickmarks option::after {
+        bottom: 45px;
+    }
+    .activity__name {
+        font-size: 16px;
+    }
+
+    /*Приёмная*/
+    .my-deputat.reception-page .my-deputat__tab button {
+        font-size: 15px;
+        width: 48%;
+    }
+    .reception-page .my-deputat__tab.activity button {
+        width: 99%;
+        margin: 5px;
+    }
+    .reception-page .my-deputat__link::after {
+        margin-left: 3px;
+    }
+    .reception-page .my-deputat__tab {
+        margin-left: 20px;
+    }
+    .reception__form-title {
+        font-size: 16px;
+    }
+    .reception__helper-name {
+        font-size: 16px;
+    }
+    .reception__helper-name {
+        margin-left: 10px;
+    }
+    .reception__helper-info-block {
+        margin-left: 10px;
+    }
+    .reception__picture {
+        width: 90px;
+        height: 90px;
+    }
+    .reception__contacts {
+        width: calc(100% - 110px);
+        margin-bottom: 50px;
+    }
+    
+    /*комитеты*/
+    .committees-page .my-deputat__tab {
+        margin-left: 20px;
+    }
+    .committees-page .my-deputat__link::after {
+        margin-left: 10px;
+    }
+    .structure-committees__list {
+        flex-wrap: wrap;
+    }
+    .structure-committees__item {
+        width: 17%;
+        margin-bottom: 10px;
+    }
+}
+@media (max-width: 1024px) {
+    .menu__arrow {
+        position: absolute;
+        top: 0px;
+        right: -39px;
+        padding: 5px;
+        background-color: #ffffff;
+        transition: all 0.3s;
+        display: block;
+    }
+    .menu__arrow img {
+        width: 30px;
+        transform: rotate(180deg);
+        transition: all 0.3s;
+    }
+    .left-side {
+        position: absolute;
+        left: -220px;
+        transition: all .3s;
+        z-index: 1;
+        box-shadow: 0px 4px 24px rgb(0 0 0 / 25%);
+    }
+    .left-side.active {
+        top: 0px;
+        left: 0;
+    }
+    .left-side.active .menu__arrow img {
+        transform: rotate(0deg);
+    }
+    .logo-block {
+        width: 170px;
+    }
+    .head-block {
+        width: calc(100% - 170px);
+    }
+    .logo-block img {
+        width: 140px;
+    }
+    .site-body {
+        position: relative;
+    }
+    
+    main {
+        width: 100%;
+        position: relative;
+        z-index: 0;
+    }
+    .main-slider {
+        max-width: 993px;
+    }
+    .main-slider__info {
+        width: 40%;
+    }
+    .content-list__tab button:first-child, 
+    .my-deputat__tab button:first-child {
+        margin-left: 20px;
+    }
+    .content-list {
+        max-width: 993px;
+        margin-bottom: 0px;
+    }
+    .content-list__content, 
+    .my-deputat__content {
+        width: 98%;
+    }
+    .opacity__button {
+        width: 58%;
+    }
+    .opacity__block {
+        width: 40%;
+    }
+    .evolution-map {
+        width: 99%;
+    }
+    /*Дума*/
+    .my-deputat__body {
+        width: 100%;
+    }
+    .deputat-page .my-deputat__tab {
+        margin-left: 7px;
+    }
+    #history .evolution__range-block {
+        width: 98%;
+    }
+    /*Деятельность*/
+}
+@media (max-width: 992px) {
+    header {
+        height: 100px;
+    }
+    .logo-block {
+        width: 120px;
+    }
+    .logo-block img {
+        width: 100px;
+    }
+    .head-block {
+        width: calc(100% - 100px);
+    }
+    .head-block__image {
+        display: none;
+    }
+    .head-block__list {
+        max-width: 460px;
+    }
+    .head-block__text {
+        margin: 0px;
+        font-size: 10px;
+        height: 55px;
+        min-height: 50px;
+        border-left: 0px;
+        border-right: 2px solid #247CCD;
+        padding: 10px;
+    }
+    .head-block__contacts {
+        margin-left: 10px;
+    }
+    .head-block__contacts a {
+        padding: 2px;
+    }
+    .main-slider__info {
+        width: 47%;
+    }
+    .main-slider__text {
+        color: #247CCD;
+        -webkit-text-stroke: 1px #000000;
+    }
+    .main-video__title {
+        font-size: 38px;
+    }
+    .main-video__block {
+        width: calc(100% - 20px);
+        margin-left: 10px;
+    }
+    .evlution__title {
+        margin-left: 10px;
+    }
+    .evolution__body {
+        margin-left: 10px;
+    }
+    .history__title {
+        margin-left: 10px;
+    }
+    .history .history__range-block {
+        width: calc(100% - 20px);
+        margin-left: 10px;
+    }
+    .history {
+        width: 98%;
+    }
+    .history__body {
+        width: calc(100% - 60px);
+        margin-left: 35px;
+    }
+    .content-list__content, .my-deputat__content {
+        width: calc(100% - 40px);
+        margin-left: 20px;
+    }
+    .my-deputat__image {
+        width: 120px;
+    }
+    .footer__menu {
+        width: 15%;
+        margin: 5px;
+    }
+    .all-deputats {
+        width: 98%;
+    }
+
+    /*О Думе*/
+    .deputat-page .my-deputat__tab {
+        width: calc(100% - 20px);
+        margin-left: 10px;
+    }
+
+    /*Приемная*/
+    .reception-page .my-deputat__tab {
+        width: calc(100% - 20px);
+        margin-left: 10px;
+    }
+    .my-deputat__tab.activity button {
+        margin: 10px;
+    }
+}
+@media (max-width: 767px) {}
 @media (max-width: 577px) {}
 @media (max-width: 449px) {}
