--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -145,6 +145,9 @@ header {
     align-items: center;
     transition: all .3s;
 }
+.menu__arrow {
+    display: none;
+}
 .left-side__search {
     width: 284px;
     height: 42px;
@@ -1690,6 +1693,9 @@ input[type=range]:focus::-ms-fill-upper {
     align-items: flex-start;
     list-style-type: none;
 }
+.footer__arrow {
+    display: none;
+}
 .footer__menu-item {
     margin-bottom: 15px;
 }
@@ -2312,6 +2318,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 @media (max-width: 1024px) {
     .menu__arrow {
+        display: block;
         position: absolute;
         top: 0px;
         right: -39px;
@@ -2494,6 +2501,243 @@ input[type=range]:focus::-ms-fill-upper {
         margin: 10px;
     }
 }
-@media (max-width: 767px) {}
+@media (max-width: 767px) {
+    .head-block {
+        justify-content: space-between;
+    }
+    .head-block__image {
+        display: block;
+        margin-left: 10px;
+    }
+    .head-block__list {
+        display: none;
+    }
+    .head-block__contacts {
+        margin-left: 0px;
+        margin-right: 10px;
+    }
+    .main-slider__info {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    .main-slider__text {
+        width: 100%;
+        text-align: center;
+        margin-top: 0px;
+        margin-bottom: 30px;
+    }
+    .main-slider__button {
+        margin-bottom: 20px;
+    }
+    .content-list__tab, 
+    .my-deputat__tab {
+        margin-bottom: 10px;
+    }
+    .news-list {
+        margin-left: 0px;
+    }
+    .content-list__content, 
+    .my-deputat__content {
+        width: calc(100% - 20px);
+        margin-left: 10px;
+    }
+    .news-list__link {
+        font-size: 15px;
+    }
+    .news-list__title {
+        font-size: 12px;
+    }
+    .main-video__title,
+    .my-deputat__title {
+        font-size: 30px;
+        margin-left: 10px;
+    }
+    .evlution__title,
+    .history__title {
+        font-size: 30px;
+    }
+    .evolution__ranges {
+        flex-wrap: wrap;
+    }
+    .evolution__range-block {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .evolution__range-block.opacity {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .opacity__button {
+        width: 100%;
+        max-width: 320px;
+        margin-bottom: 20px;
+    }
+    .opacity__block {
+        width: 100%;
+    }
+    .evolution-map {
+        width: 100%;
+    }
+    .history__body {
+        width: calc(100% - 20px);
+        margin-left: 10px;
+    }
+    .history__year {
+        font-size: 42px;
+        left: 0px;
+        top: -25px;
+    }
+    .history__item {
+        width: 32%;
+    }
+    .history__name {
+        font-size: 16px;
+        margin-bottom: 10px;
+        display: block;
+        height: 40px;
+    }
+    .history__text {
+        height: 150px;
+        overflow: scroll;
+    }
+    .history__text-block .history__text {
+        height: auto;
+        overflow: visible;
+    }
+    .content-list__tab button:first-child, 
+    .my-deputat__tab button:first-child {
+        margin-left: 10px;
+    }
+    .my-deputat__list {
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .my-deputat__item {
+        width: 28%;
+        margin-bottom: 20px;
+    }
+    .footer__arrow {
+        display: block;
+        margin-left: 20px;
+        transition: all .3s;
+    }
+    .footer__menu {
+        width: 48%;
+        height: 40px;
+        overflow: hidden;
+        transition: all .3s;
+    }
+    .footer__menu.open {
+        height: max-content;
+    }
+    .footer__menu-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .footer__menu.open .footer__arrow {
+        transform: rotate(180deg);
+    }
+
+    /*о Думе*/
+    .deputat-page .my-deputat__tab {
+        width: 100%;
+        margin-left: 0px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .content-list__tab button:first-child, 
+    .my-deputat__tab button:first-child {
+        margin-left: 5px;
+    }
+    .deputat-page #tickmarks option:nth-child(2n) {
+        display: none;
+    }
+
+    /*Депутаты*/
+    .deputat-page .my-deputat__item {
+        width: 25%;
+    }
+    .deputat-page .my-deputat__list {
+        justify-content: center;
+    }
+    .activity__name {
+        width: calc(100% - 100px);
+        font-size: 14px;
+    }
+    .activity__links {
+        width: 80px;
+    }
+    .reception__body {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .reception__form {
+        width: 98%;
+        order: 2;
+        margin-top: 20px;
+    }
+    .reception__helper {
+        width: 98%;
+        order: 1;
+        margin-right: 0px;
+    }
+    .reception-schedule__body .reception__search-block {
+        width: 98%;
+    }
+    .reception__search-input {
+        padding-left: 5px;
+        margin: 0px 5px;
+    }
+    .reception-schedule__title {
+        width: calc(100% - 20px);
+        margin-left: 10px;
+    }
+    .reception-schedule__table {
+        width: calc(100% - 20px);
+        margin-left: 10px;
+    }
+    .reception-schedule__table td {
+        padding: 5px;
+        font-size: 12px;
+    }
+    .reception-schedule__table td.table__title-col {
+        font-size: 14px;
+    }
+    .table__title-col.time img {
+        width: 315px;
+    }
+
+    /*комитеты*/
+    .activity__item.committees {
+        padding: 10px 0px;
+    }
+    .activity__item.committees .activity__name {
+        width: calc(100% - 60px);
+    }
+    .activity__item.committees .activity__links {
+        width: 40px;
+        margin-right: 5px;
+        padding: 0px;
+    }
+    .my-deputat__tab {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        border-top: 1px solid #fefefe;
+        border-bottom: 1px solid #fefefe;
+    }
+    .my-deputat__tab button {
+        width: 45%;
+        margin: 5px;
+    }
+    .my-deputat__tab button:last-child {
+        width: 80%;
+    }
+}
 @media (max-width: 577px) {}
 @media (max-width: 449px) {}
